--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
+    "moment-timezone": "^0.5.34",
     "mongoose": "^6.3.3"
   }
 }
